[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/font,themes/labels.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/new/background/thumb-1920-611159.jpg" type="Texture" id=2]
[ext_resource path="res://assets/new/effects_sounds/win_.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/ui/backward.png" type="Texture" id=4]
[ext_resource path="res://assets/new/effects_sounds/player/switch1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/ui/forward.png" type="Texture" id=6]
[ext_resource path="res://src/Screens/End_screen.gd" type="Script" id=7]
[ext_resource path="res://src/Screens/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/font,themes/fonts/PixelRPG.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=5]
size = 72
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/GridContainer/Label_settings:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/GridContainer/Label_quit:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "selected_quit"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_quit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 572, 397 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 130, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "selected_settings"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_settings:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 527, 356 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 220, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "selected_start"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/GridContainer/Label_start:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.894118, 0.12549, 0.12549, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 500, 314 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Right/Left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 274, 0 ) ]
}

[node name="End_screen_win" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/Maps/map01.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 14.0
margin_bottom = 8.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_you_died" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -366.0
margin_top = 150.0
margin_right = 366.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 5 )
text = "You won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 517.0
margin_top = 300.0
margin_right = 763.0
margin_bottom = 419.0

[node name="Label_start" type="Label" parent="CenterContainer/GridContainer"]
margin_right = 246.0
margin_bottom = 37.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "PLAY AGAIN"
align = 1

[node name="Label_settings" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 41.0
margin_right = 246.0
margin_bottom = 78.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "SETTINGS"
align = 1

[node name="Label_quit" type="Label" parent="CenterContainer/GridContainer"]
margin_top = 82.0
margin_right = 246.0
margin_bottom = 119.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "QUIT"
align = 1

[node name="Label_kills" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -110.0
margin_right = 87.0
custom_fonts/font = ExtResource( 1 )
text = "Kills: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/selected_quit = SubResource( 7 )
anims/selected_settings = SubResource( 8 )
anims/selected_start = SubResource( 9 )

[node name="Right" type="Sprite" parent="."]
position = Vector2( 500, 314 )
texture = ExtResource( 6 )

[node name="Left" type="Sprite" parent="Right"]
position = Vector2( 274, 0 )
texture = ExtResource( 4 )

[node name="Label_switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sfx"

[node name="Settings" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="gui_input" from="CenterContainer/GridContainer/Label_start" to="." method="_on_Label_start_gui_input"]
[connection signal="gui_input" from="CenterContainer/GridContainer/Label_settings" to="." method="_on_Label_settings_gui_input"]
[connection signal="gui_input" from="CenterContainer/GridContainer/Label_quit" to="." method="_on_Label_quit_gui_input"]
[connection signal="settings_label_back" from="Settings" to="." method="_on_Settings_settings_label_back"]
